<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="true"
    android:background="#E5E5E5"
    tools:context="com.lskycity.androidtools.HomeActivity">
    <LinearLayout
        android:padding="@dimen/activity_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:showDividers="middle"
                android:divider="?android:dividerHorizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/device_name"
                    android:padding="12dp"
                    android:drawablePadding="4dp"
                    android:drawableStart="@drawable/ic_phone_android_black_24dp"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Hello World!"/>

                <TextView
                    android:id="@+id/android_version"
                    android:padding="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="Hello World!"/>

                <TextView
                    android:id="@+id/imei"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="Hello World!"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:showDividers="middle"
                android:divider="?android:dividerHorizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cpu_abi"
                    android:padding="12dp"
                    android:drawableStart="@drawable/ic_memory_black_24dp"
                    android:drawablePadding="4dp"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/supported_cpu_abi"/>

                <TextView
                    android:id="@+id/support_32"
                    android:padding="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="Hello World!"/>

                <TextView
                    android:id="@+id/support_64"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="Hello World!"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:showDividers="middle"
                android:divider="?android:dividerHorizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/gl_version_title"
                    android:padding="12dp"
                    android:drawableStart="@drawable/ic_graphic_eq_black_24dp"
                    android:drawablePadding="4dp"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/opengl_version"/>


                <TextView
                    android:id="@+id/gl_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="Hello World!"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:showDividers="middle"
                android:divider="?android:dividerHorizontal"
                android:orientation="vertical">

                <TextView
                    android:padding="12dp"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:drawablePadding="4dp"
                    android:drawableStart="@drawable/ic_photo_camera_black_24dp"
                    android:text="@string/camera_parameter"/>

                <TextView
                    android:id="@+id/backend"
                    android:padding="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/grant_camera_permission_msg"/>

                <TextView
                    android:id="@+id/front"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="Hello World!"/>

                <Button
                    android:id="@+id/grant_camera_permission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grant_permission"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:showDividers="middle"
                android:divider="?android:dividerHorizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/more"
                    android:padding="12dp"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:background="?selectableItemBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/more"/>


            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>


